new: usr: ZEP-489: Notebook ACLs